<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="#000000"
tools:context="com.example.sfd.test_1.MainActivity">

    <Button
        android:id="@+id/main1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="10sp"
        android:layout_alignParentLeft="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/scan_ble"/>
    <Button
        android:id="@+id/main1_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="10sp"
        android:layout_alignParentRight="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/enable_tx_ble"/>
    <!--<Button-->
        <!--android:id="@+id/main1_button3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="false"-->
        <!--android:layout_marginTop="10sp"-->
        <!--android:layout_marginLeft="200sp"-->
        <!--android:textColor="#00ff00"-->
        <!--android:textSize="20sp"-->
        <!--android:text="@string/popup_test"/>-->

    <!--<TextView-->
        <!--android:id="@+id/siple_mac"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/title_name"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_below="@id/main1_button"-->
        <!--android:layout_alignParentLeft="true"/>-->
    <!--<TextView-->
        <!--android:id="@+id/siple_test"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/title_rssi"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_below="@id/main1_button"-->
        <!--android:layout_alignParentRight="true"/>-->
    <!--<ListView-->
        <!--android:id="@+id/list_1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/main1_button"-->
        <!--android:layout_marginTop="30dp"/>-->
    <TextView
        android:id="@+id/receive_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dispdata_bg"
        android:textSize="15dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:maxLines="100"
        android:paddingLeft="5dp"
        android:layout_below="@+id/main1_button"
        android:layout_above="@+id/send_data_button"/>
    <EditText
        android:id="@+id/send_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sendeditview_bg"
        android:textSize="35dp"
        android:textColor="#ffffff"
        android:layout_toLeftOf="@+id/send_data_button"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/send_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/send_data"/>
</RelativeLayout>
